[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Start Screen/StartScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Logo.png" type="Texture" id=2]
[ext_resource path="res://Assets/Themes/UITheme.tres" type="Theme" id=14]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
draw_center = false

[sub_resource type="StyleBoxEmpty" id=1]

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 14 )
script = ExtResource( 1 )

[node name="StartScreenContainer" type="MarginContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 1064.0
rect_min_size = Vector2( 1880, 1040 )

[node name="StartScreenDividerContainer" type="VBoxContainer" parent="StartScreenContainer"]
margin_right = 1880.0
margin_bottom = 1044.0

[node name="LogoContainer" type="PanelContainer" parent="StartScreenContainer/StartScreenDividerContainer"]
margin_right = 1880.0
margin_bottom = 524.0
rect_min_size = Vector2( 1880, 524 )
custom_styles/panel = SubResource( 2 )

[node name="Logo" type="TextureRect" parent="StartScreenContainer/StartScreenDividerContainer/LogoContainer"]
margin_right = 1880.0
margin_bottom = 524.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 6

[node name="ContentContainer" type="HBoxContainer" parent="StartScreenContainer/StartScreenDividerContainer"]
margin_top = 528.0
margin_right = 1880.0
margin_bottom = 1044.0
rect_min_size = Vector2( 1880, 516 )

[node name="Panel" type="Panel" parent="StartScreenContainer/StartScreenDividerContainer/ContentContainer"]
margin_right = 1880.0
margin_bottom = 516.0
rect_min_size = Vector2( 1880, 516 )
custom_styles/panel = SubResource( 1 )

[node name="ButtonsContainer" type="VBoxContainer" parent="StartScreenContainer/StartScreenDividerContainer/ContentContainer/Panel"]
margin_right = 300.0
margin_bottom = 516.0
rect_min_size = Vector2( 300, 516 )
alignment = 2

[node name="Start game" type="Button" parent="StartScreenContainer/StartScreenDividerContainer/ContentContainer/Panel/ButtonsContainer"]
margin_top = 208.0
margin_right = 300.0
margin_bottom = 308.0
rect_min_size = Vector2( 260, 100 )
text = "Start game "

[node name="Games" type="Button" parent="StartScreenContainer/StartScreenDividerContainer/ContentContainer/Panel/ButtonsContainer"]
margin_top = 312.0
margin_right = 300.0
margin_bottom = 412.0
rect_min_size = Vector2( 260, 100 )
text = "Games "

[node name="Stats" type="Button" parent="StartScreenContainer/StartScreenDividerContainer/ContentContainer/Panel/ButtonsContainer"]
margin_top = 416.0
margin_right = 300.0
margin_bottom = 516.0
rect_min_size = Vector2( 260, 100 )
text = "Stats "

[node name="Exit game" type="Button" parent="StartScreenContainer/StartScreenDividerContainer/ContentContainer/Panel/ButtonsContainer"]
visible = false
margin_top = 416.0
margin_right = 300.0
margin_bottom = 516.0
rect_min_size = Vector2( 260, 100 )
text = "Exit game "

[node name="Button" type="Button" parent="StartScreenContainer/StartScreenDividerContainer/ContentContainer/Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -112.0
margin_top = -100.0
rect_min_size = Vector2( 0, 100 )
text = "Report bug "

[connection signal="pressed" from="StartScreenContainer/StartScreenDividerContainer/ContentContainer/Panel/ButtonsContainer/Start game" to="." method="_on_Start_Button_pressed"]
[connection signal="pressed" from="StartScreenContainer/StartScreenDividerContainer/ContentContainer/Panel/ButtonsContainer/Games" to="." method="_on_Games_Button_pressed"]
[connection signal="pressed" from="StartScreenContainer/StartScreenDividerContainer/ContentContainer/Panel/ButtonsContainer/Stats" to="." method="_on_Stats_Button_pressed"]
[connection signal="pressed" from="StartScreenContainer/StartScreenDividerContainer/ContentContainer/Panel/ButtonsContainer/Exit game" to="." method="_on_Exit_Button_pressed"]
[connection signal="pressed" from="StartScreenContainer/StartScreenDividerContainer/ContentContainer/Panel/Button" to="." method="_on_ReportBug_pressed"]
